# stats

./: .gitignore  .pre-commit-config.yaml  CNAME  README.md  _quarto.yml  about.qmd  index.html  index.qmd  publish.sh  pyproject.toml  search.html  search.json  search.qmd  styles.css  template.html  template.qmd
.github/workflows/: deploy.yaml
dev/: create-an-article.md  setup-environment.md
docs/: 404.html  about.html  index.html  ollb_stat_welcom.html  search.html  search.json  template.html
docs/learn/: average.html  index.html  median.html  template.html  ttest.html
docs/learn/compare-groups/: index.html
docs/learn/descriptive-statistics/: average-and-median.html  average-median-and-mode.html  (+2 more)
learn/: index.html  index.qmd  ttest.qmd
learn/compare-groups/: index.html
learn/descriptive-statistics/: average-median-and-mode.html  average-median-and-mode.qmd  central-tendency.qmd  standard-deviation-and-variance.qmd  standard-error-and-variance.qmd
learn/group-observations-or-variables/: index.html  index.qmd
learn/identify-relationships-between-variables/: index.html  linear-regression.qmd
learn/predict-a-variable/: index.html
learn/preparing-and-exploring-data/: index.html
learn/survival-analysis/: index.html
learn/time-series/: index.html
script/: tree.js
site_libs/bootstrap/: bootstrap-5bf22804bdbd4926ff2fe1dcd0b1608c.min.css  bootstrap-abd91b2149847740760756683f7294d5.min.css  bootstrap-b24fa35fe5621c3c6c87172c432e2a10.min.css
src/python/: theme.py
style/: clean-link.css  main.css  search.css  styles.css  variables.css
(+8 files in other folders)
