[project]
name = "oohlalab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
    "seaborn>=0.13.2",
]
